--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -54,7 +54,7 @@ concurrency:
 jobs:
   build:
     name: Build YTLitePlus
-    runs-on: macos-13
+    runs-on: macos-latest
     permissions:
       contents: write
 
@@ -112,7 +112,7 @@ jobs:
           ./theos-jailed/install
         env:
           THEOS: ${{ github.workspace }}/theos
-        
+
       - name: Fix Compiling
         run: |
           # Update GNU Make to allow for faster building
@@ -194,7 +194,7 @@ jobs:
           name: YTLitePlus_${{ env.YT_VERSION }}_${{ env.YTLITE_VERSION }}
           path: ${{ github.workspace }}/main/packages/${{ steps.build_package.outputs.package }}
           if-no-files-found: error
-          
+
       - name: Upload Artifact to Catbox and update AltStore repo
         if: ${{ inputs.catbox_upload }}
         run: |
@@ -205,7 +205,7 @@ jobs:
           # Pass Catbox URL to the release steps
           echo "CATBOX_FILE=$CATBOX_FILE" >> $GITHUB_ENV
           echo "CATBOX_URL=$CATBOX_URL" >> $GITHUB_ENV
-      
+
       - name: Prepare Release Notes
         if: ${{ inputs.create_release }}
         run: |
